{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 16,
  "lineage": "672733ce-b81c-a264-69f3-0abdae059c9c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "global_ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:186588680621:instance/i-01ba5efb83f64e027",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01ba5efb83f64e027",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-000d963477ebfe536",
            "private_dns": "ip-172-31-86-234.ec2.internal",
            "private_ip": "172.31.86.234",
            "public_dns": "ec2-52-90-105-97.compute-1.amazonaws.com",
            "public_ip": "52.90.105.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ae55cc286b7296a6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "WebServer-SG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b86c94c39f63b266",
            "tags": {
              "Name": "My_Ubuntu",
              "Owner": "Far Muratov",
              "project": "Devops"
            },
            "tags_all": {
              "Name": "My_Ubuntu",
              "Owner": "Far Muratov",
              "project": "Devops"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-026a26d73909ab629"
            ]
          },
          "dependencies": [
            "aws_security_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "local_amazon_ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-033b95fb8079dc481",
            "arn": "arn:aws:ec2:us-east-1:186588680621:instance/i-0f3ec85c4e3a60f66",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f3ec85c4e3a60f66",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b241eb385ce83f4b",
            "private_dns": "ip-172-31-87-65.ec2.internal",
            "private_ip": "172.31.87.65",
            "public_dns": "ec2-3-91-182-139.compute-1.amazonaws.com",
            "public_ip": "3.91.182.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09420798f7208b64e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b86c94c39f63b266",
            "tags": {
              "Name": "My_Amazon_Ubuntu",
              "Owner": "Far Muratov",
              "project": "Devops"
            },
            "tags_all": {
              "Name": "My_Amazon_Ubuntu",
              "Owner": "Far Muratov",
              "project": "Devops"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00da9c6d94af8c775"
            ]
          },
          "dependencies": [
            "aws_security_group.local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:186588680621:security-group/sg-00da9c6d94af8c775",
            "description": "SG for Devops project for local connection",
            "egress": [],
            "id": "sg-00da9c6d94af8c775",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "WebServer-SG-local",
            "name_prefix": "",
            "owner_id": "186588680621",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dc991515dc6c70f3"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:186588680621:security-group/sg-026a26d73909ab629",
            "description": "SG for Devops project",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026a26d73909ab629",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "WebServer-SG",
            "name_prefix": "",
            "owner_id": "186588680621",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dc991515dc6c70f3"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}